--- a/js/l1/css/l1-app.css
+++ b/js/l1/css/l1-app.css
@@ -4,7 +4,13 @@ textarea {
     font-family: Monaco, Arial, Helvetica, sans-serif;
 }
 
-#code {
+#code, #fakeData {
     background-color: black;
     color:whitesmoke;
 }
+
+#fakeData {
+    background-color: black;
+    color:whitesmoke;
+}
+
